--- a/JGBusiness-Customers-microservice-prod.properties
+++ b/JGBusiness-Customers-microservice-prod.properties
@@ -1,4 +1,4 @@
-JGBusiness-Customers.property=JGBusiness Porfile Dev
+JGBusiness-Customers.property=JGBusiness customers Porfile prod
 
 spring.datasource.url=jdbc:h2:mem:testdb
 spring.datasource.driverClassName=org.h2.Driver
